@@ -17,8 +17,6 @@
 Don't hesitate to contact me for any feedback, questions, feature requests, etc.<br><br>
 Easiest way is by <A href="mailto:auria AT users.sourceforge.net">email</A> (my address is obscured against spam : replace AT by @)<br>
 
-You can also reach me on the Sourceforge page, there are forums and also a bug tracker.
-
 </blockquote>
 
 </body>
